prometheus/prometheus-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: prometheus-service-az
spec:
  selector:
    app: prometheus-az
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: NodePort
